<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginBottom="10dp"
        android:elevation="20dp"
        android:minHeight="150dp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        card_view:cardCornerRadius="0dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/Name_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="Danny August"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#222"
                android:textSize="26sp" />

            <TextView
                android:id="@+id/Email_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="7dp"
                android:gravity="center"
                android:text="august_danny@yahoo.co.id"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#222"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Username_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="danny7899"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#888" />


            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:text="@string/acc_desc"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#222"
                android:textSize="20sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


    <Button
        android:id="@+id/btnPostToast"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:text="@string/btn_postToast"
        android:textColor="@color/background" />

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="35dp"
        android:background="@color/tabColorPrimary"
        android:elevation="4dp"
        android:text="@string/btn_logout"
        android:textColor="@color/textColorPrimary" />

</LinearLayout>