<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="50dp"
                android:background="@color/colorPrimary">

                <ImageView
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:gravity="right"
                    android:src="@drawable/logo_image" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="96dp"
                    android:layout_marginLeft="10dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/app_name"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:text="@string/app_name"
                        android:textColor="#FFF"
                        android:textSize="32dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/web_address"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left"
                        android:text="www.dailytoast.dx.am"
                        android:textColor="#fff"
                        android:textSize="20dp" />

                </LinearLayout>


            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:background="@drawable/background_gradient">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/emailWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@+id/etPassword" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/passwordWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="78dp">

                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        android:inputType="textPassword" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginTop="200dp"
                    android:background="@color/tabColorPrimary"
                    android:text="@string/btn_login"
                    android:textColor="@color/textColorPrimary"
                    android:elevation="4dp"/>

                <Button
                    android:id="@+id/btnLinkToRegisterScreen"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/btnLogin"
                    android:layout_marginTop="10dp"
                    android:background="@null"
                    android:text="@string/btn_link_to_register"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="15dp" />
                <Button
                    android:id="@+id/btnGuest"
                    style="?android:attr/borderlessButtonStyle"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/btnLinkToRegisterScreen"
                    android:background="@null"
                    android:text="@string/btn_guest_continue"
                    android:textAllCaps="false"
                    android:textColor="#Afff"
                    android:textSize="15dp" />

            </RelativeLayout>


        </LinearLayout>
    </ScrollView>
</RelativeLayout>